--- a/src/components/perms/perms.css
+++ b/src/components/perms/perms.css
@@ -1,5 +1,6 @@
 .permissions{
-    padding: 2rem;
+    padding: 1rem;
+    width: 100%;
 }
 
 .permissions button{
